# GGJ2025

./: .gitmodules  README.md  pyproject.toml
game/: .gitignore  default_bus_layout.tres  export_presets.cfg  icon.svg.import  project.godot
game/addons/glb_import_fix/: glb_import_fix.gd  importer.gd  plugin.cfg
game/addons/pixpal_tools/: material_importer.gd  pixpal_tools.gd
game/assets/: defaul_env.tres  stick.res
game/assets/materials/: M_ImphenziaPixPal_Wobble.tres  quallenfuss_mat.tres  quallenkopf_mat.tres
game/assets/meshes/: Bow.res  Bow_001.mesh  Column.res  Column1.res  Column1_001.mesh  Column2.res  Column2_001.mesh  Column_001.mesh  Column_002.mesh  Duck_001.mesh  Duck_01_Cube_045.mesh  Kiste.res  Kiste_001.mesh  Leaf.res  Leaf_001.mesh  Plant.res  Plant_001.mesh  Qualle.res  Qualle_001.mesh  Rock.res  (+14 more)
game/objects/: Bubble.tscn  BubbleColumn.tscn  EvilBubble.tscn  InverseBubbleColumn.tscn  Qualle.tscn  bubble.gd  bubble_column.gd  evli_bubble.gd  inverse_bubble_column.gd  tree.gd  tree.tscn
game/scripts/: bubble_area.gd  footpath.gd  gyrocontrols.gd  tree.gd  view.gd  wiiboard.gd
game/shaders/: VS_ImphenziaPixPal_Wobble.tres  bubble.gdshader  bubble_decal.gdshader  quallenfuss.gdshader  quallenkopf.gdshader
ggj2025/: wiiboard_server.py
starter-kit-3d-platformer/scenes/: main.tscn
starter-kit-3d-platformer/sprites/: colornoise.png.import
wiiboard_server/: pyproject.toml
wiiboard_server/wiiboard_server/: wiiboard_com_plotter.py  wiiboard_plotter.py  wiiboard_server.py
wiiboard_server/wiiboard_server/wiiboard/: wiiboard.py  wiindows.py
(+142 files in other folders)
